## Process this file with automake to produce Makefile.in

TESTS = check_autobroadcast
check_PROGRAMS = check_autobroadcast
check_autobroadcast_SOURCES = check_autobroadcast.c $(top_builddir)/src/autobroadcast.h
check_autobroadcast_CFLAGS = @CHECK_CFLAGS@
check_autobroadcast_LDADD = $(top_builddir)/src/libautobroadcast.la @CHECK_LIBS@
